--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <div class="flex justify-center space-x-6 text-3xl text-green-600">
       <a href="tel:+917730814093" aria-label="Phone"><i class="fas fa-phone"></i></a>
       <a href="mailto:info@kveggies.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
-      <a href="https://instagram.com" aria-label="Instagram"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" class="w-8 h-8 inline"></a>
-      <a href="https://facebook.com" aria-label="Facebook"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" class="w-8 h-8 inline"></a>
-      <a href="https://twitter.com" aria-label="Twitter"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" class="w-8 h-8 inline"></a>
+      <a href="https://instagram.com kveggies_" aria-label="Instagram"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" class="w-8 h-8 inline"></a>
+      <a href="https://facebook.com kveggies_" aria-label="Facebook"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" class="w-8 h-8 inline"></a>
+      <a href="https://twitter.com kveggies_" aria-label="Twitter"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" class="w-8 h-8 inline"></a>
     </div>
   </section>
 
